--- a/Obligatories/Q7/CAIM/Lab/lab3/03elastic_prog.ipynb
+++ b/Obligatories/Q7/CAIM/Lab/lab3/03elastic_prog.ipynb
@@ -73,11 +73,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "rYigfvIq0Ex3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(b'{\\n  \"name\" : \"10-192-170-215client.eduroam.upc.edu\",\\n  \"cluster_name\" : '\n",
+      " b'\"elasticsearch\",\\n  \"cluster_uuid\" : \"nhigYoLMQYqHsoEar5DFlw\",\\n  \"version'\n",
+      " b'\" : {\\n    \"number\" : \"9.1.4\",\\n    \"build_flavor\" : \"default\",\\n    \"build'\n",
+      " b'_type\" : \"tar\",\\n    \"build_hash\" : \"0b7fe68d2e369469ff9e9f344ab6df64ab9c'\n",
+      " b'5293\",\\n    \"build_date\" : \"2025-09-16T22:05:19.073893347Z\",\\n    \"build_s'\n",
+      " b'napshot\" : false,\\n    \"lucene_version\" : \"10.2.2\",\\n    \"minimum_wire_com'\n",
+      " b'patibility_version\" : \"8.19.0\",\\n    \"minimum_index_compatibility_version'\n",
+      " b'\" : \"8.0.0\"\\n  },\\n  \"tagline\" : \"You Know, for Search\"\\n}\\n')\n"
+     ]
+    }
+   ],
    "source": [
     "from elasticsearch import Elasticsearch\n",
     "from elasticsearch_dsl import Index, analyzer, tokenizer\n",
@@ -98,12 +113,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "cDKA_vBB0Ex5",
     "outputId": "84aadef5-f58f-46ca-ed3f-61f2684ab742"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "*** Using analyzer english_stem\n",
+      "Tokens: ['my', 'taylor', '4í', 'print', 'print', 'rich']\n",
+      "\n",
+      "*** Using analyzer exact_match\n",
+      "Tokens: ['my taylor 4ís was% &printing printed rich the.']\n",
+      "\n",
+      "*** Using analyzer whitespace_fold\n",
+      "Tokens: ['My', 'taylor', '4is', 'was%', '&printing', 'Printed', 'rich', 'the.']\n"
+     ]
+    }
+   ],
    "source": [
     "# Index analyzer cofiguration\n",
     "# Change the configuration and run this cell and the next to see the changes\n",
@@ -171,9 +202,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "*** Using analyzer english_stem\n",
+      "Tokens: ['we', 'found', 'my', 'ladi', 'light', 'room', 'read', 'lamp', 'shade', 'screw', 'down', 'so', 'over', 'shadow', 'her', 'face', 'instead', 'look', 'up', 'us', 'her', 'usual', 'straightforward', 'wai', 'she', 'sat', 'close', 'tabl', 'kept', 'her', 'ey', 'fix', 'obstin', 'open', 'book', 'offic', 'she', 'said', 'import', 'inquiri', 'you', 'conduct', 'know', 'beforehand', 'ani', 'person', 'now', 'hous', 'wish', 'leav']\n",
+      "\n",
+      "*** Using analyzer exact_match\n",
+      "Tokens: ['\\nwe found my lady with no light in the room but the reading-lamp.\\nthe shade was screwed down so as to over-shadow her face. instead of looking up at us in her usual straightforward way, she sat\\nclose at the table, and kept her eyes fixed obstinately on an open\\nbook.\\n“officer,” she said, “it is important to the inquiry you are conducting to know beforehand if any person now in this house wishes\\nto leave it?”\\n']\n",
+      "\n",
+      "*** Using analyzer whitespace_fold\n",
+      "Tokens: ['We', 'found', 'my', 'lady', 'with', 'no', 'light', 'in', 'the', 'room', 'but', 'the', 'reading-lamp.', 'The', 'shade', 'was', 'screwed', 'down', 'so', 'as', 'to', 'over-shadow', 'her', 'face.', 'Instead', 'of', 'looking', 'up', 'at', 'us', 'in', 'her', 'usual', 'straightforward', 'way,', 'she', 'sat', 'close', 'at', 'the', 'table,', 'and', 'kept', 'her', 'eyes', 'fixed', 'obstinately', 'on', 'an', 'open', 'book.', '\"Officer,\"', 'she', 'said,', '\"it', 'is', 'important', 'to', 'the', 'inquiry', 'you', 'are', 'conducting', 'to', 'know', 'beforehand', 'if', 'any', 'person', 'now', 'in', 'this', 'house', 'wishes', 'to', 'leave', 'it?\"']\n"
+     ]
+    }
+   ],
    "source": [
     "moonstone = \"\"\"\n",
     "We found my lady with no light in the room but the reading-lamp.\n",
@@ -317,19 +364,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import os\n",
     "import math\n",
     "import pandas as pd\n",
     "from collections import defaultdict\n",
     "from random import sample\n",
+    "from elasticsearch.helpers import scan\n",
     "\n",
     "file_path = \"arxiv\"\n",
     "list_dirs = os.listdir(file_path)\n",
@@ -341,43 +382,51 @@
     "        for filename in os.listdir(dir_path):\n",
     "            full_path = os.path.join(dir_name, filename)\n",
     "            aux.append(full_path)\n",
-    "    list_files.append(sample(aux, 200))\n",
+    "    list_files.append(sample(aux, 50))\n",
     "    aux = []\n",
+    "    \n",
     "# número de documentos\n",
-    "print(list_files)\n",
-    "D = len(list_files)\n",
-    "print(D)\n",
+    "files = [f for sub in list_files for f in sub]\n",
+    "print(files)\n",
+    "print(len(files))\n",
     "\n",
-    "index = Index('ex3', using=client) \n",
-    "for sublist in list_files:\n",
-    "    for filename in sublist:\n",
-    "        with open(os.path.join(file_path, filename), \"r\", encoding=\"utf-8\") as f:\n",
-    "            text = f.read()\n",
-    "            client.index(index='ex3', document={'text': text})\n",
+    "index = Index('ex3', using=client)\n",
+    "for filename in files:\n",
+    "    path = os.path.join(file_path, filename)\n",
+    "    with open(path, \"r\", encoding=\"utf-8\") as f:\n",
+    "        text = f.read()\n",
+    "        client.index(index='ex3', document={'text': text, 'path': path})\n",
     "        \n",
-    "client.indices.refresh(index='ex3')\n",
-    "\n",
+    "client.indices.refresh(index='ex3')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# diccionario: d{id} -> {word: tf-idf}\n",
     "tfidf_table = defaultdict(dict)\n",
     "\n",
     "sc = scan(client, index='ex3', query={\"query\" : {\"match_all\": {}}})\n",
-    "# for i, s in enumerate(sc):\n",
-    "#     tv = client.termvectors(\n",
-    "#         index='ex3', id=s['_id'],\n",
-    "#         fields=['text'], term_statistics=True, positions=False\n",
-    "#     )\n",
-    "#     if 'text' in tv['term_vectors']:\n",
-    "#         terms = tv['term_vectors']['text']['terms']\n",
-    "#         for word, stats in terms.items():\n",
-    "#             tf = stats['term_freq']\n",
-    "#             df = stats['doc_freq']\n",
-    "#             # usamos la variación smooth idf, que evita la división por \n",
-    "#             # cero y modera los pesos de los terminos raros.\n",
-    "#             idf = math.log(D / (1 + df)) + 1\n",
-    "#             tfidf = tf * idf\n",
-    "#             tfidf_table[f\"d{i+1}\"][word] = tfidf\n",
+    "for i, s in enumerate(sc):\n",
+    "    tv = client.termvectors(\n",
+    "        index='ex3', id=s['_id'],\n",
+    "        fields=['text'], term_statistics=True, positions=False\n",
+    "    )\n",
+    "    if 'text' in tv['term_vectors']:\n",
+    "        terms = tv['term_vectors']['text']['terms']\n",
+    "        for word, stats in terms.items():\n",
+    "            tf = stats['term_freq']\n",
+    "            df = stats['doc_freq']\n",
+    "            # usamos la variación smooth idf, que evita la división por \n",
+    "            # cero y modera los pesos de los terminos raros.\n",
+    "            idf = math.log(D / (1 + df)) + 1\n",
+    "            tfidf = tf * idf\n",
+    "            tfidf_table[f\"d{i+1}\"][word] = tfidf\n",
     "\n",
-    "#index.delete()\n"
+    "#index.delete()"
    ]
   },
   {
