--- a/Obligatories/Q7/CAIM/Lab/lab6/06pagerank.ipynb
+++ b/Obligatories/Q7/CAIM/Lab/lab6/06pagerank.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -521,15 +521,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 32s, sys: 4.99 s, total: 1min 37s\n",
-      "Wall time: 43 s\n"
+      "CPU times: user 1min 56s, sys: 13.4 s, total: 2min 10s\n",
+      "Wall time: 15h 59min 1s\n"
      ]
     }
    ],
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
