--- a/Obligatories/Q7/CAIM/Lab/lab7/07mapreduce.ipynb
+++ b/Obligatories/Q7/CAIM/Lab/lab7/07mapreduce.ipynb
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7755,7 +7755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -7802,38 +7802,37 @@
     "    pr = np.full(n, 1.0 / n)\n",
     "    teleport = np.full(n, 1.0 / n) if teleport is None else teleport\n",
     "\n",
-    "    # asegurarse de tener outdeg y sinks\n",
     "    outdeg_rdd = compute_outdegrees_rdd(edges_rdd)\n",
     "    sinks, outdeg = get_sinks(outdeg_rdd)\n",
-    "    outdeg_b = sc.broadcast(outdeg)   # usado sólo para evitar cero en divisiones (sinks ya tratados)\n",
+    "    outdeg_b = sc.broadcast(outdeg)  \n",
     "\n",
     "    it = 0\n",
     "    while it < max_iters:\n",
     "        it += 1\n",
     "        pr_old = pr.copy()\n",
     "\n",
-    "        # suma de PR de nodos sin salida (sinks)\n",
+    "        # suma de PR de nodos sin salida\n",
     "        pr_nowhere = pr[sinks].sum()\n",
     "\n",
-    "        # broadcast del vector pr / outdeg para que cada worker calcule contribuciones\n",
+    "        # broadcast del vector pr / outdeg\n",
     "        pr_div = pr / outdeg_b.value\n",
     "        pr_div_b = sc.broadcast(pr_div)\n",
     "\n",
-    "        # contributions: cada arista u->v aporta pr[u]/outdeg[u] a v\n",
+    "        # contributions: cada arista u -> v aporta pr[u]/outdeg[u] a v\n",
     "        contribs_rdd = (edges_rdd\n",
     "                        .map(lambda e: (e[1], pr_div_b.value[e[0]]))\n",
     "                        .reduceByKey(lambda a, b: a + b))\n",
     "\n",
     "        # construir nuevo vector pr\n",
-    "        base = (1.0 - damping) * teleport                       # parte de teleportación\n",
-    "        sink_share = pr_nowhere / n                             # parte que reparten los sinks uniformemente\n",
-    "        pr = np.full(n, base)                                   # inicia con teleport parte\n",
-    "        for k, v in contribs_rdd.collect():                     # traer sólo las contribuciones (size ~ n)\n",
+    "        base = (1.0 - damping) * teleport  \n",
+    "        sink_share = pr_nowhere / n        \n",
+    "        pr = np.full(n, base)              \n",
+    "        for k, v in contribs_rdd.collect():\n",
     "            pr[k] += damping * v\n",
-    "        pr += damping * sink_share                              # añadir efecto de sinks\n",
+    "        pr += damping * sink_share         \n",
     "\n",
     "        pr_div_b.unpersist()\n",
-    "        # comprobación de convergencia L1\n",
+    "        # Convergencia L1\n",
     "        if np.linalg.norm(pr - pr_old, 1) <= tol:\n",
     "            break\n",
     "\n",
